--- a/index.html
+++ b/index.html
@@ -6,38 +6,41 @@
     <link rel="stylesheet" href="./src/output.css">
     <title>PanditJi</title>
 </head>
-<body>
-         <!-- Header -->
-    <header class="bg-white shadow-md">
-        <nav class="container mx-auto px-6 py-4">
-            <div class="flex justify-between items-center">
-                <!-- Desktop Menu -->
-                <div class="hidden md:flex space-x-8">
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Samagri</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Costing</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Charges</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Pandit Ji Bio</a>
-                </div>
 
-                <!-- Mobile Hamburger Icon -->
-                <button id="mobile-menu-button" class="md:hidden text-black">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
-                    </svg>
-                </button>
+ <!-- Header -->
+ <header class="bg-white shadow-md">
+    <nav class="container mx-auto px-6 py-4">
+        <div class="flex justify-between items-center">
+            <!-- Desktop Menu -->
+            <div class="hidden md:flex space-x-8">
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Samagri</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Costing</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Charges</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Pandit Ji Bio</a>
             </div>
 
-            <!-- Mobile Menu -->
-            <div id="mobile-menu" class="hidden md:hidden absolute top-16 left-0 right-0 bg-white shadow-lg">
-                <div class="flex flex-col space-y-4 p-4">
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Samagri</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Costing</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Charges</a>
-                    <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Pandit Ji Bio</a>
-                </div>
+            <!-- Mobile Hamburger Icon -->
+            <button id="mobile-menu-button" class="md:hidden text-black">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+                </svg>
+            </button>
+        </div>
+
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden absolute top-16 left-0 right-0 bg-white shadow-lg">
+            <div class="flex flex-col space-y-4 p-4">
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Samagri</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Costing</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Puja Charges</a>
+                <a href="#" class="text-black hover:text-gray-600 hover:bg-gray-100 px-4 py-2 rounded">Pandit Ji Bio</a>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
+
+<body class="bg-black">
+    <section class="bg-orange-400 mb-2">
     <!-- Image Carousel -->
     <div class="container mx-auto px-6 py-8">
         <div class="relative overflow-hidden rounded-lg">
@@ -47,6 +50,7 @@
                 <img src="./src/assets/il_570xN.5657466422_26a8.webp" class="w-full h-96 object-cover" alt="Puja 2">
                 <img src="./src/assets/desktop-wallpaper-god-ram-darbar-thumbnail.jpg" class="w-full h-96 object-cover" alt="Puja 3">
                 <img src="./src/assets/depositphotos_318781246-stock-illustration-hindu-lord-ganesha-texture-wallpaper.jpg" class="w-full h-96 object-cover" alt="Puja 4">
+                <img src="./src/assets/WhatsApp Image 2025-02-10 at 17.15.51.jpeg" class="w-full h-96 object-cover" alt="Puja 4">
             </div>
 
             <!-- Navigation Buttons -->
@@ -66,6 +70,20 @@
             </div>
         </div>
     </div>
+</section>
+<section class="bg-orange-400 mb-2">
+    <div class="container mx-auto px-6 py-8">
+        <div class="bg-teal-400 rounded-md border">
+            <div >Thank you for contacting.....
+                (Pooja/path,Booking)🙏
+     Pandit ji,   Shri Angad Dwivedi
+Website :- www.smartpanditji.com
+Email :- smartpanditji11@gmail.com
+Cont :- 9066154211,8217337789✍️
+           🚩🚩जय श्री राधे राधे🚩🚩</div>
+        </div>
+    </div>
+</section>
     <script src="./app.js"></script>
 </body>
 
