--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="w-full  bg-white rounded-md shadow-md hover:cursor-pointer">  <! --container structure ->
                   <div class="lg:flex md:flex">
                     <div class="left md:w-1/2 ">
-                      <img class="object-cover h-full rounded-md" src="./src/assets/shrimad-bhagwat-katha.jpg" alt="">
+                      <img class="object-cover h-full rounded-md" src="./src/assets/slider3 (1).jpeg" alt="">
                     </div>
                     <div class="right md:w-1/2 flex-col text-center pt-3">
                           <H1 class="mb-2 font-extrabold text-red-600">Satyanarayan Katha</H1>
@@ -119,7 +119,7 @@
                   <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                     <div class="lg:flex md:flex ">
                       <div class="left md:w-1/2 ">
-                        <img class="object-cover h-full rounded-md" src="./src/assets/slider3.jpeg" alt="">
+                        <img class="object-cover h-full rounded-md" src="./src/assets/slider4 (1).jpeg" alt="">
                       </div>
                       <div class="right md:w-1/2 flex-col text-center pt-3">
                             <H1 class="mb-2 font-extrabold text-red-600">Premium Griha Pravesh</H1>
@@ -134,7 +134,7 @@
                 <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                   <div class="lg:flex md:flex">
                     <div class="left md:w-1/2 ">
-                      <img class="object-cover h-full rounded-md " src="./src/assets/resize 1.jpg" alt="">
+                      <img class="object-cover h-full rounded-md " src="./src/assets/slider2 (1).jpeg" alt="">
                     </div>
                     <div class="right md:w-1/2 flex-col text-center pt-3">
                           <H1 class="mb-2 font-extrabold text-red-600">Rudra Abhishek</H1>
@@ -149,7 +149,7 @@
               <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                 <div class="lg:flex md:flex ">
                   <div class="left md:w-1/2 ">
-                    <img class="object-cover h-full rounded-md" src="./src/assets/slider4.jpeg" alt="">
+                    <img class="object-cover h-full rounded-md" src="./src/assets/slider5 (1).jpeg" alt="">
                   </div>
                   <div class="right md:w-1/2 flex-col text-center pt-3">
                         <H1 class="mb-2 font-extrabold text-red-600">Office Puja</H1>
