Pooja gallary updated with 28 images

--- a/index.html
+++ b/index.html
@@ -268,11 +268,30 @@
     <div class="slider-center py-12">
       <div><img class="w-full h-full object-fit" src="./src/assets/WhatsApp Image 2025-07-06 at 23.27.52 (2).jpeg" alt="Slide 1" class="rounded-lg shadow-md w-full"></div>
       <div><img class="w-full h-full object-fit" src="./src/assets/WhatsApp Image 2025-07-06 at 23.27.52 (1).jpeg" alt="Slide 2" class="rounded-lg shadow-md w-full"></div>
-      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_4.webp" alt="Slide 3" class="rounded-lg shadow-md w-full"></div>
-      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_5.webp" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
-      <div><img class="w-full h-full object-cover" src="./src/assets/Slider_6.webp" alt="Slide 5" class="rounded-lg shadow-md w-full"></div>
-      <div><img class="w-full h-full object-cover" src="./src/assets/Slider_7.webp" alt="Slide 6" class="rounded-lg shadow-md w-full"></div>
-      <div><img class="w-full h-full object-cover" src="./src/assets/Slider_8.webp" alt="Slide 6" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_10 (1).png" alt="Slide 3" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_3.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_4.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <!-- <div><img class="w-full h-full object-fit" src="./src/assets/Slider_5.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div> -->
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_6 (1).png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_6.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_8.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_9.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_13.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_14.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_15.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_16.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_17.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_18.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_19.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_20.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_21.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_24.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_25.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_26.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_27.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_28.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_29.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
+      <div><img class="w-full h-full object-fit" src="./src/assets/Slider_31.png" alt="Slide 4" class="rounded-lg shadow-md w-full"></div>
     </div>
   </div>
 </section>
