--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="w-full  bg-white rounded-md shadow-md hover:cursor-pointer">  <! --container structure ->
                   <div class="lg:flex md:flex">
                     <div class="left md:w-1/2 ">
-                      <img class="object-cover h-full rounded-md" src="./src/assets/slider3 (1).jpeg" alt="">
+                      <img class="object-fit h-full rounded-md" src="./src/assets/slider3 (1).jpeg" alt="">
                     </div>
                     <div class="right md:w-1/2 flex-col text-center pt-3">
                           <H1 class="mb-2 font-extrabold text-red-600">Sri Satyanarayan Pooja</H1>
@@ -186,7 +186,7 @@
                   <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                     <div class="lg:flex md:flex ">
                       <div class="left md:w-1/2 ">
-                        <img class="object-cover h-full rounded-md" src="./src/assets/slider4 (1).jpeg" alt="">
+                        <img class="object-fit h-full rounded-md" src="./src/assets/slider4 (1).jpeg" alt="">
                       </div>
                       <div class="right md:w-1/2 flex-col text-center pt-3">
                             <H1 class="mb-2 font-extrabold text-red-600">Nutan Griha Pravesh pooja</H1>
@@ -201,7 +201,7 @@
                 <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                   <div class="lg:flex md:flex">
                     <div class="left md:w-1/2 ">
-                      <img class="object-cover h-full rounded-md " src="./src/assets/slider2 (1).jpeg" alt="">
+                      <img class="object-fit h-full rounded-md " src="./src/assets/slider2 (1).jpeg" alt="">
                     </div>
                     <div class="right md:w-1/2 flex-col text-center pt-3">
                           <H1 class="mb-2 font-extrabold text-red-600">Shri Rudrabhishek pooja</H1>
@@ -216,7 +216,7 @@
               <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                 <div class="lg:flex md:flex ">
                   <div class="left md:w-1/2 ">
-                    <img class="object-cover h-full rounded-md" src="./src/assets/slider5 (1).jpeg" alt="">
+                    <img class="object-fit h-full rounded-md" src="./src/assets/slider5 (1).jpeg" alt="">
                   </div>
                   <div class="right md:w-1/2 flex-col text-center pt-3">
                         <H1 class="mb-2 font-extrabold text-red-600">⁠Shri Sundar kand/Path</H1>
@@ -229,7 +229,7 @@
                       <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                 <div class="lg:flex md:flex ">
                   <div class="left md:w-1/2 ">
-                    <img class="object-cover h-full rounded-md" src="./src/assets/slider5 (1).jpeg" alt="">
+                    <img class="object-fit h-full rounded-md" src="./src/assets/slider5 (1).jpeg" alt="">
                   </div>
                   <div class="right md:w-1/2 flex-col text-center pt-3">
                         <H1 class="mb-2 font-extrabold text-red-600">Gandmul, Nakshatra shanti pooja (sataisa)</H1>
@@ -242,7 +242,7 @@
               <div class="w-full  bg-white rounded-md shadow-md">  <! --container structure ->
                 <div class="lg:flex md:flex ">
                   <div class="left md:w-1/2 ">
-                    <img class="object-cover h-full rounded-md" src="./src/assets/Shubh_vivah.png" alt="">
+                    <img class="object-fit sm:h-[250px] sm:w-[375px] h-full rounded-md" src="./src/assets/Shubh_vivah.png" alt="">
                   </div>
                   <div class="right md:w-1/2 flex-col text-center pt-3">
                         <H1 class="mb-2 font-extrabold text-red-600">⁠Shubh Vivah<br>(Marriage function)</H1>
