--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">Sri Satyanarayan Pooja</h2>
-            <p class="text-gray-600 mb-4 text-sm">A sacred ritual to Lord Vishnu, bringing prosperity and harmony. Performed for success and wish fulfillment.</p>
+            <p class="text-gray-600 mb-4 text-sm">A devotional ritual dedicated to Lord Vishnu, performed for prosperity, peace, and overall well-being of family and life.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
@@ -194,7 +194,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">Nutan Griha Pravesh Pooja</h2>
-            <p class="text-gray-600 mb-4 text-sm">Performed with Vedic rituals to bless a new home with peace, prosperity, and positive energy.</p>
+            <p class="text-gray-600 mb-4 text-sm">Sacred ceremony performed when entering a new home, invoking divine blessings for happiness, protection, and auspicious beginnings.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
@@ -213,7 +213,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">Shri Rudrabhishek Pooja</h2>
-            <p class="text-gray-600 mb-4 text-sm">A powerful ritual to Lord Shiva, removing obstacles and bringing spiritual upliftment and prosperity.</p>
+            <p class="text-gray-600 mb-4 text-sm">A powerful Vedic ritual offering prayers to Lord Shiva, performed with mantras and offerings for health, wealth, and removal of negativities.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
@@ -232,7 +232,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">⁠Shri Sundar Kand / Path</h2>
-            <p class="text-gray-600 mb-4 text-sm">Performed for office prosperity and blessings. Encourages growth, harmony, and financial stability at work.</p>
+            <p class="text-gray-600 mb-4 text-sm">Recitation of Sundar Kand from Ramayana, invoking Lord Hanuman’s blessings for courage, devotion, strength, and resolution of difficulties.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
@@ -251,7 +251,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">Gandmool / Nakshatra Shanti (Sataisa)</h2>
-            <p class="text-gray-600 mb-4 text-sm">Performed to nullify the ill effects of Gandmool Nakshatra, bringing harmony and protection to newborns.</p>
+            <p class="text-gray-600 mb-4 text-sm">Ritual performed to pacify malefic planetary effects of specific birth nakshatras, ensuring harmony, protection, and smooth life journey.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
@@ -270,7 +270,7 @@
           </div>
           <div class="w-full sm:w-1/2 flex flex-col text-center justify-center p-4">
             <h2 class="mb-2 font-extrabold text-red-600">⁠Shubh Vivah (Marriage Function)</h2>
-            <p class="text-gray-600 mb-4 text-sm">Performed for a blissful marital life, invoking divine blessings and harmony between couples.</p>
+            <p class="text-gray-600 mb-4 text-sm">Sacred Hindu wedding ceremony uniting two souls, invoking blessings of deities for love, prosperity, lifelong companionship, and happiness.</p>
             <p class="font-semibold mb-4">
               Price:
               <a href="https://api.whatsapp.com/send?phone=919066154211..." target="_blank">
